feat(app): add vue application with vue-cli template webpack
Vue build runtime, Install vue-router? Yes, Use ESLint to lint your code? Yes, Pick an ESLint preset
Standard, Set up unit tests Yes, Pick a test runner jest, Setup e2e tests with Nightwatch? Yes,

--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,23 @@ typings/
 
 # dotenv environment variables file
 .env
+
+# OS files
+.DS_Store
+
+# Builded files
+/dist/
+
+# Test files
+/test/unit/coverage/
+/test/e2e/reports/
+selenium-debug.log
+
+
+# Editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
