--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "cross-spawn": "^5.0.1",
     "css-loader": "^0.28.0",
     "cz-conventional-changelog": "^2.1.0",
-    "eslint": "^3.19.0",
+    "eslint": "^4.13.1",
     "eslint-config-standard": "^10.2.1",
     "eslint-friendly-formatter": "^3.0.0",
     "eslint-loader": "^1.7.1",
@@ -51,6 +51,7 @@
     "eslint-plugin-node": "^5.2.0",
     "eslint-plugin-promise": "^3.4.0",
     "eslint-plugin-standard": "^3.0.1",
+    "eslint-plugin-vue": "^4.0.0-beta.4",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
