--- a/package.json
+++ b/package.json
@@ -66,6 +66,8 @@
     "portfinder": "^1.0.13",
     "postcss-import": "^11.0.0",
     "postcss-loader": "^2.0.8",
+    "pug": "^2.0.0-rc.4",
+    "pug-loader": "^2.3.0",
     "rimraf": "^2.6.0",
     "selenium-server": "^3.0.1",
     "semver": "^5.3.0",
