--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "test": "npm run unit && npm run e2e",
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs",
     "build": "node build/build.js",
-    "commitmsg": "validate-commit-msg"
+    "commitmsg": "validate-commit-msg",
+    "precommit": "npm run test"
   },
   "dependencies": {
     "vue": "^2.5.2",
