--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "postcss-loader": "^2.0.8",
     "pug": "^2.0.0-rc.4",
     "pug-loader": "^2.3.0",
+    "reload-html-webpack-plugin": "^0.1.2",
     "rimraf": "^2.6.0",
     "selenium-server": "^3.0.1",
     "semver": "^5.3.0",
