--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "precommit": "npm run test"
   },
   "dependencies": {
+    "lodash": "^4.17.4",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
