--- a/package.json
+++ b/package.json
@@ -2,10 +2,9 @@
   "name": "poc-cms",
   "version": "0.5.0",
   "description": "Proof of concept for CMS",
-  "main": "src/index.js",
   "repository": "git@github.com:letanure/poc-cms.git",
   "author": "Luiz Tanure <letanure@gmail.com>",
-  "license": "MIT",
+  "private": true,
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
     "start": "npm run dev",
@@ -69,6 +68,7 @@
     "portfinder": "^1.0.13",
     "postcss-import": "^11.0.0",
     "postcss-loader": "^2.0.8",
+    "postcss-url": "^7.2.1",
     "pug": "^2.0.0-rc.4",
     "pug-loader": "^2.3.0",
     "reload-html-webpack-plugin": "^0.1.2",
@@ -116,7 +116,7 @@
     }
   },
   "engines": {
-    "node": ">= 4.0.0",
+    "node": ">= 6.0.0",
     "npm": ">= 3.0.0"
   },
   "browserslist": [
