--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Proof of concept for CMS",
   "repository": "git@github.com:letanure/poc-cms.git",
   "author": "Luiz Tanure <letanure@gmail.com>",
-  "private": true,
+  "private": false,
   "scripts": {
     "api": "json-server --watch mock-api/index.js --port 3004",
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
@@ -22,6 +22,7 @@
     "lodash": "^4.17.4",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
+    "vuelidate": "^0.6.1",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
