--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "precommit": "npm run unit"
   },
   "dependencies": {
+    "approvejs": "^3.1.2",
     "axios": "^0.17.1",
     "lodash": "^4.17.4",
     "vue": "^2.5.13",
